--- a/src/kits/nova/components/NavigationMenu/NavigationMenu.css
+++ b/src/kits/nova/components/NavigationMenu/NavigationMenu.css
@@ -176,6 +176,7 @@
   .nova-navmenu__list {
     overflow-x: auto;
     flex-wrap: nowrap;
+    scrollbar-width: none;
   }
   .nova-navmenu__list > * {
     flex: 0 0 auto;
